Towards release 1.0.0 (for O-RAN A)
- Implement the Release A spec in openapi.yaml
- Rework A1 to follow that spec
- Remove rmr_mapping now that we use policyid as the mtype to send and a well known mtype for the ACKs
- Add the delay receiver test to the tavern integration tests
- Remove unneeded ENV variables from helm charts
- Switch away from builder images to avoid quicksand; upgrade rmr at our own pace
